// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`firebaseReducer reducer AUTH_STATUS_LOGGED_IN 1`] = `
Object {
  "addForm": Object {
    "error": null,
    "inProgress": false,
  },
  "appState": "READY",
  "auth": Object {
    "errors": Object {
      "resetPassword": null,
      "signIn": null,
      "signUp": null,
    },
    "inProgress": false,
    "user": Object {
      "email": "test@example.com",
      "uid": "testId",
    },
  },
  "flocks": Object {
    "data": Object {
      "flock1": "item1value",
      "flock2": "item2value",
    },
    "error": null,
    "inProgress": false,
    "initialized": false,
  },
  "initialUrl": null,
  "joinForm": Object {
    "error": null,
    "inProgress": false,
  },
  "userSettings": Object {
    "data": Object {
      "item1": "item1value",
      "item2": "item2value",
    },
    "error": null,
    "inProgress": false,
    "initialized": false,
  },
}
`;

exports[`firebaseReducer reducer missing initial state 1`] = `
Object {
  "addForm": Object {
    "error": null,
    "inProgress": false,
  },
  "appState": "STARTING",
  "auth": Object {
    "errors": Object {
      "resetPassword": null,
      "signIn": null,
      "signUp": null,
    },
    "inProgress": false,
    "user": null,
  },
  "chickens": Object {
    "data": Object {},
    "error": null,
    "inProgress": false,
    "initialized": false,
  },
  "deleteChicken": Object {
    "error": null,
    "inProgress": false,
  },
  "deleteFlock": Object {
    "error": null,
    "inProgress": false,
  },
  "eggs": Object {
    "data": Object {},
    "error": null,
    "inProgress": false,
    "initialized": false,
  },
  "flocks": Object {
    "data": Object {},
    "error": null,
    "inProgress": false,
    "initialized": false,
  },
  "initialUrl": null,
  "joinForm": Object {
    "error": null,
    "inProgress": false,
  },
  "userSettings": Object {
    "data": Object {},
    "error": null,
    "inProgress": false,
    "initialized": false,
  },
}
`;

exports[`firebaseReducer reducer undefined initial state 1`] = `
Object {
  "addForm": Object {
    "error": null,
    "inProgress": false,
  },
  "appState": "STARTING",
  "auth": Object {
    "errors": Object {
      "resetPassword": null,
      "signIn": null,
      "signUp": null,
    },
    "inProgress": false,
    "user": null,
  },
  "chickens": Object {
    "data": Object {},
    "error": null,
    "inProgress": false,
    "initialized": false,
  },
  "deleteChicken": Object {
    "error": null,
    "inProgress": false,
  },
  "deleteFlock": Object {
    "error": null,
    "inProgress": false,
  },
  "eggs": Object {
    "data": Object {},
    "error": null,
    "inProgress": false,
    "initialized": false,
  },
  "flocks": Object {
    "data": Object {},
    "error": null,
    "inProgress": false,
    "initialized": false,
  },
  "initialUrl": null,
  "joinForm": Object {
    "error": null,
    "inProgress": false,
  },
  "userSettings": Object {
    "data": Object {},
    "error": null,
    "inProgress": false,
    "initialized": false,
  },
}
`;
